--- a/task-app/package.json
+++ b/task-app/package.json
@@ -12,7 +12,11 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
+    "@tanstack/react-query": "^4.19.1",
+    "axios": "^1.2.0",
     "expo": "~47.0.8",
+    "expo-auth-session": "~3.7.3",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
