--- a/task-app/package.json
+++ b/task-app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.5.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.19.1",
     "axios": "^1.2.0",
     "expo": "~47.0.8",
@@ -25,7 +26,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-reanimated": "~2.12.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
